--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     </div>
     <script src="/src/jquery.min.js"></script>
     <script src="/src/cornerstone.js"></script>
+    <script src="/src/cornerstoneMath.js"></script>
+    <script src="/src/cornerstoneTools.js"></script>
     <script src="/src/exampleImageIdLoader.js"></script>
     <script src="/static/bundle.js"></script>
   </body>
