Some fixes to get Viewport component to display

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <div id='root'>
     </div>
     <script src="/src/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <script src="/src/hammer.js"></script>
     <script src="/src/cornerstone.js"></script>
     <script src="/src/cornerstoneMath.js"></script>
     <script src="/src/cornerstoneTools.js"></script>
