--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <title>OHIF Viewerbase React Example</title>
   </head>
   <body>
-    <div id='root'>
+    <div id='root'
+         style='width: 100vw; height: 100vh; overflow: hidden;'>
     </div>
     <script src="/src/jquery.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
