Remove duplicate theme variables

--- a/src/__docs__/index.html
+++ b/src/__docs__/index.html
@@ -14,7 +14,6 @@
     - Export the themes as identical JS objects
     - For theme switcher, update root-level CSS properties via JS (https://medium.com/@_bengarrison/accessing-and-modifying-css-variables-with-javascript-2ccb735bbff0)
     */
-
     :root {
       /* Interface UI Colors */
       --default-color: #9CCEF9;
@@ -48,6 +47,7 @@
       --ui-state-error: #FFCCCC;
       --ui-state-error-border: #993333;
       --ui-state-error-text: #661111;
+      --ui-gray-lighter: #436270;
       --ui-gray-light: #516873;
       --ui-gray: #263340;
       --ui-gray-dark: #16202B;
