Add global font-awesome import

--- a/src/__docs__/index.html
+++ b/src/__docs__/index.html
@@ -5,7 +5,11 @@
     <meta name="description" content="{{ description }}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    
     <title>{{ title }}</title>
+    <!-- Used by CINE Dialog -->
+    <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <style>
     /* "Tide" theme */
     /* TODO:
