Adding new version of Reboto link and include in index.html

--- a/src/__docs__/index.html
+++ b/src/__docs__/index.html
@@ -11,7 +11,7 @@
    <!-- Latest compiled and minified CSS -->
    <link rel="stylesheet" href="/public/docz.css">
    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700|Sanchez&display=swap">
+   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto&display=swap">
 
     <style>
     /* "Tide" theme */
@@ -66,6 +66,9 @@
       --calendar-day-active-hover-background-color: #516873;
       --calendar-main-color: #263340;
       --viewport-border-thickness: 1px;
+    }
+    body {
+      font-family: 'Roboto', sans-serif !important;
     }
     </style>
     {{ head }}
