fix(font-family) Incorrect font-family used in demo components (#101)
* Adding new version of Reboto link and include in index.html

* Keep old Roboto font link

--- a/src/__docs__/index.html
+++ b/src/__docs__/index.html
@@ -67,6 +67,9 @@
       --calendar-main-color: #263340;
       --viewport-border-thickness: 1px;
     }
+    body {
+      font-family: 'Roboto', sans-serif !important;
+    }
     </style>
     {{ head }}
   </head>
